--- a/week-6/week-6.css
+++ b/week-6/week-6.css
@@ -7,3 +7,23 @@ h1 {
     font-weight: bold;
     text-align: center;
 }
+
+div {
+    background: darkgray;
+    height: 500px; width: 500px;
+    border: 2px solid red;
+}
+
+span {
+    border: 5px dashed blue;
+}
+
+p{
+    background: lightgrey;
+    font-size: 2em;
+    height: 200px; width: 75%;
+}
+span {
+    background: yellow;
+    font-size: 16em; width: 100px;
+}
